# ferricyanide

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  ben.xyz  cyclic_1_to_2.xyz  cyclic_2_intr_3.xyz  cyclic_2_to_3.xyz  index.html  ph3po.xyz
.github/workflows/: gh-pages.yml  integration.yml
demo/: benzoic_acid.xyz  cyclic.html  cyclic_1.xyz  cyclic_1_intr_2.xyz  cyclic_2.xyz  cyclic_3.xyz  cyclic_3_to_4.xyz  cyclic_4.xyz  cyclic_5.xyz  cyclic_5_to_6.xyz  cyclic_6.xyz  p30.xyz  pinc.xyz  pkg
demo/css/: sticky-menu.css
pkg/: package.d.ts  package.js  package.json  package_bg.d.ts  package_bg.wasm
src/: lib.rs
src/app/: mod.rs
src/app/store/: camera.rs  mod.rs  mouse.rs
src/molecule/: element.rs  mod.rs  octree.rs  surface.rs
src/render/: canvas.rs  mod.rs
src/render/shader/: basic_fs.glsl  basic_vs.glsl  cylinder_vs.glsl  lighting_fs.glsl  mod.rs  sphere_vs.glsl
src/render/shape/: cylinder.rs  mod.rs  sphere.rs  triangle.rs
