[package]
name = "ferricyanide"
version = "0.1.0"
authors = ["Jonathan Fine <finej@purdue.edu>"]
edition = "2018"
license = "MIT/Apache-2"
repository = "https://github.com/frodofine/ferricyanide"
description = "Molecular viewer targeting WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.35"
wasm-bindgen = "0.2.58"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.35"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'Node',
  'Touch',
  'TouchEvent',
  'TouchList',
  'KeyboardEvent',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',
  'console',
]

[dependencies.webgl-matrix]
version = "0.1.0"
features = [
  'Matrix3',
  'Matrix4',
]

[profile.release]
opt-level = 's'
lto = true
